Refactor controllers and views, update migrations and added admin and user facing views

--- a/Library Management/appsettings.json
+++ b/Library Management/appsettings.json
@@ -1,9 +1,12 @@
 {
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Ahmad-PC\\SQLEXPRESS03;Database=Library_Management;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
